--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_alignParentStart="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -23,8 +23,9 @@
             <android.support.v7.widget.CardView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/card_view_info_area"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="0.25"
+                android:layout_height="match_parent"
                 android:visibility="gone"
                 style="?attr/cardStyle" >
 
@@ -34,7 +35,8 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/cardList"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="0.75"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 android:paddingBottom="@dimen/fab_recyclerview_padding" />
