--- a/app/src/main/res/layout/component_info_area.xml
+++ b/app/src/main/res/layout/component_info_area.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/info_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_margin_small">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/info_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="@dimen/activity_margin_small">
 
     <ImageView
         android:id="@+id/thumbnailImg"
@@ -27,8 +27,8 @@
         android:id="@+id/textViewTags"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:text="tag 1, tag 2, tag 3" />
+        android:text="tag 1, tag 2, tag 3"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/valueText"
