Handle exceptions when manually ading new OTPs

--- a/app/src/main/res/values/strings_main.xml
+++ b/app/src/main/res/values/strings_main.xml
@@ -58,6 +58,7 @@
     <string name="toast_copied_to_clipboard">Copied to clipboard</string>
     <string name="toast_entry_exists">This entry already exists</string>
     <string name="toast_invalid_qr_code">Invalid QR Code</string>
+    <string name="toast_invalid_otp_details">Invalid OTP details</string>
     <string name="toast_encryption_key_empty">Encryption key not loaded</string>
 
     <!-- Dialogs -->
